fix: adjust button responsiveness on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -119,4 +119,9 @@ strong{
     .presentation-content {
         width: auto;
     }
+    .btn:hover {
+        background-color: var(--hover-color);
+        width: 50%;
+        padding: 21.5px 0;
+}
 }
